# rlvr-tool-safety

./: .gitignore  CLAUDE.md  STARTER_PROMPT.md  pyproject.toml
configs/tool_schemas/: agentdojo_v1.json
scripts/: prepare_data.py  validate_truncation.py
slurm/: cache_models.sbatch  cluster_env.sh  eval.sbatch  setup.sh  setup_trillium.sh  train.sbatch
src/evaluation/: eval_tool.py
src/training/: callbacks.py  data.py  rewards.py  train.py
